--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-yu-gi-oh",
+  "name": "array",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.4.0",
-    "bootstrap": "^5.2.3",
-    "sass": "^1.62.1",
-    "vue": "^3.2.47"
+    "bootstrap": "^5.3.0-alpha3",
+    "vue": "^3.2.47",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "sass": "^1.62.1",
     "vite": "^4.3.2"
   }
 }
